--- a/index.html
+++ b/index.html
@@ -29,8 +29,11 @@
       <div class="text-header text-center py-3">
         <h1 class="text-light">To-Dos</h1>
       </div>
-      <div class="d-flex flex-column gap-3 align-items-center">
-        <div id="cards-add-list">
+      <div class="d-flex align-items-start gap-4">
+        <div id="cards-task" class="my-5 d-flex gap-4 align-items-start">
+          <!-- Element And Card Entered -->
+        </div>
+        <div id="cards-add-list" class="">
           <div class="p-3">
             <label
               for="add-list-form"
@@ -48,13 +51,6 @@
               <button class="btn all-button" id="btn-add">Add</button>
             </div>
           </div>
-        </div>
-
-        <div
-          id="cards-task"
-          class="d-flex align-items-start flex-wrap justify-content-center gap-3 my-5"
-        >
-          <!-- Element And Card Entered -->
         </div>
       </div>
     </div>
